labs/IntroOpenshift/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
  namespace: project1
spec:
  selector:
    matchLabels:
      app: hello-openshift
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-openshift
    spec:
      containers:
        - name: hello-openshift
          image: openshift/hello-openshift
          ports:
            - containerPort: 8080
